--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 Flask==0.10.1
+Flask-Mail==0.9.1
 Jinja2==2.8
 MarkupSafe==0.23
+PCV==1.0
+Pillow==3.0.0
 Werkzeug==0.11.3
 amqp==1.4.9
 anyjson==0.3.3
 billiard==3.3.0.22
+blinker==1.4
 celery==3.1.19
 decorator==4.0.4
 funcsigs==0.4
@@ -21,6 +25,9 @@ pyparsing==2.0.3
 python-dateutil==2.4.2
 pytz==2015.6
 redis==2.10.5
+scikit-image==0.11.3
+scikit-learn==0.16.1
+scipy==0.16.0
 six==1.10.0
 wsgiref==0.1.2
 youtube-dl==2016.01.09
