--- a/src/EventDetectionWebServer/requirements.txt
+++ b/src/EventDetectionWebServer/requirements.txt
@@ -1,33 +1,67 @@
+Cheetah==2.4.4
 Flask==0.10.1
+Flask-Cors==2.1.2
 Flask-Mail==0.9.1
 Jinja2==2.8
+Landscape-Client==14.12
 MarkupSafe==0.23
-PCV==1.0
-Pillow==3.0.0
+PAM==0.4.2
+Pillow==2.3.0
+PyYAML==3.10
+Pygments==1.6
+Sphinx==1.2.2
+Twisted-Core==13.2.0
+Twisted-Names==13.2.0
+Twisted-Web==13.2.0
 Werkzeug==0.11.3
 amqp==1.4.9
 anyjson==0.3.3
+apt-xapian-index==0.45
+argparse==1.2.1
 billiard==3.3.0.22
 blinker==1.4
 celery==3.1.19
+chardet==2.0.1
+cloud-init==0.7.5
+colorama==0.2.5
+common==0.1.1
+configobj==4.7.2
 decorator==4.0.4
+docutils==0.11
 funcsigs==0.4
 gunicorn==19.4.5
+html5lib==0.999
 itsdangerous==0.24
+jsonpatch==1.3
+jsonpointer==1.0
 kombu==3.0.33
 matplotlib==1.4.3
 mock==1.3.0
 networkx==1.10
 nose==1.3.7
 numpy==1.10.1
+oauth==1.0.1
 pbr==1.8.1
+prettytable==0.7.2
+pyOpenSSL==0.13
+pycurl==7.19.3
 pyparsing==2.0.3
+pyserial==2.6
+python-apt==0.9.3.5ubuntu1
 python-dateutil==2.4.2
+python-debian==0.1.21-nmu2ubuntu2
 pytz==2015.6
 redis==2.10.5
-scikit-image==0.11.3
-scikit-learn==0.16.1
-scipy==0.16.0
+requests==2.2.1
+roman==2.0.0
 six==1.10.0
+ssh-import-id==3.21
+stevedore==1.10.0
+urllib3==1.7.1
+virtualenv==13.1.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+wheel==0.24.0
 wsgiref==0.1.2
 youtube-dl==2016.01.09
+zope.interface==4.0.5
