--- a/src/EventDetectionWebServer/requirements.txt
+++ b/src/EventDetectionWebServer/requirements.txt
@@ -50,6 +50,7 @@ pyserial==2.6
 python-apt==0.9.3.5ubuntu1
 python-dateutil==2.4.2
 python-debian==0.1.21-nmu2ubuntu2
+python-firebase==1.2
 pytz==2015.6
 redis==2.10.5
 requests==2.2.1
